# middleware-ISO-v2.2-and-x402

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.demo.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  retry_failed.py  worker.py
.claude/: settings.json
alembic/: README  env.py
app/: __init__.py  ai.py  anchor.py  anchor_node.py  anchor_poller.py  bundle.py  compliance.py  config.py  db.py  demo_seed.py  fx_providers.py  iso.py  jobs.py  main.py  models.py  monitor.py  nonce_manager.py  observability.py  queue.py  schemas.py  settings.py  sse.py  storage.py  vc.py  webhook_dispatcher.py  x402.py
contracts/: EvidenceAnchor.abi.json  EvidenceAnchor.deployed.json  EvidenceAnchor.sol  EvidenceAnchorBasic.sol  EvidenceAnchorFactory.sol  FactoryRegistry.sol
docs/: AGENTS_GUIDE.md  AGENT_ANCHORING.md  API_Documentation.md  FLARE_INTEGRATION.md  INDEX.md  KNOWN_LIMITATIONS.md  README.md  RELEASE_AUDIT.md  RELEASE_CHECKLIST.md  X402_INTEGRATION.md
embed/: receipt.html
mock-producer/: .env.example  Dockerfile  README.md  package-lock.json  package.json
proofrails-ui/: README.md  index.html  package-lock.json  package.json
schemas/: README.md
scripts/: anchor.js  check-docs-links.mjs  deploy.js  deploy_factory.js  docker_entrypoint.sh  find.js  live_ui_test.py  patch_sqlite.py  regression_run.py  run_api.py  smoke_test.py  test_cancel_flow.py  test_fi_suite.py  test_interbank.py  test_status_json_integration.py  (+2 more)
(+224 files in other folders)
