[project]
name = "middleware-iso20022"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "artifacts",
]

[tool.ruff.lint]
# Start with a pragmatic baseline (syntax + common mistakes + import order).
# We can incrementally enable more rules (B/UP/SIM/etc.) once the repo is clean.
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
# Keep mypy enabled but scoped so it provides signal without forcing a repo-wide type rewrite.
python_version = "3.11"
files = [
  "app/settings.py",
  "app/observability.py",
  "app/api/app_factory.py",
  "app/api/routes/health.py",
  "app/db.py",
  "app/queue.py",
]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
